# PhysicsEngine

./: CMakeLists.txt  README.md  build.sh  push.sh  vcpkg.json
shaders/: poly.frag  poly.vert
src/: main.cpp
src/core/: AABB.cpp  AABB.h  CollisionDetector.cpp  CollisionDetector.h  CollisionResolver.cpp  CollisionResolver.h  PhysicsWorld.cpp  PhysicsWorld.h  RigidBody.cpp  RigidBody.h  Shape.cpp  Shape.h  Vec2.h
src/platform/: Window.cpp  Window.h
src/renderer/: VulkanContext.cpp  VulkanContext.h
